fix: add optional topology config
let volume and filer servers know about topology via -rack option.
Values rack option are taken from topology configMap, where
nodes are manually mapped to racks

--- a/k8s/charts/seaweedfs/templates/filer/statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/filer/statefulset.yaml
@@ -110,6 +110,15 @@ spec:
               valueFrom: {{ toYaml $value | nindent 16 }}
             {{- end }}
             {{- end }}             
+          {{- if .Values.topologyConfig }}
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          envFrom:
+            - configMapRef:
+                name: {{ template "seaweedfs.name" . }}-topology-config
+          {{- end }}
           command:
             - "/bin/sh"
             - "-ec"
@@ -132,6 +141,9 @@ spec:
               {{- end }}
               {{- if .Values.filer.redirectOnRead }}
               -redirectOnRead \
+              {{- end }}
+              {{- if .Values.topologyConfig }}
+              -rack=$(eval "echo \$$NODE_NAME") \
               {{- end }}
               {{- if .Values.filer.disableHttp }}
               -disableHttp \
