--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -263,6 +263,10 @@ volume:
   # nodeSelector: |
   #   sw-volume: "true"
 
+  topologySpreadConstraints:
+    maxSkew: 1
+    topologyKey: topology.kubernetes.io/rack
+
   # used to assign priority to server pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
   priorityClassName: ""
@@ -410,18 +414,18 @@ filer:
 
   # extraEnvVars is a list of extra enviroment variables to set with the stateful set.
   extraEnvironmentVars:
-    WEED_MYSQL_ENABLED: "false"
-    WEED_MYSQL_HOSTNAME: "mysql-db-host"
-    WEED_MYSQL_PORT: "3306"
-    WEED_MYSQL_DATABASE: "sw_database"
-    WEED_MYSQL_CONNECTION_MAX_IDLE: "5"
-    WEED_MYSQL_CONNECTION_MAX_OPEN: "75"
-    # "refresh" connection every 10 minutes, eliminating mysql closing "old" connections
-    WEED_MYSQL_CONNECTION_MAX_LIFETIME_SECONDS: "600"
-    # enable usage of memsql as filer backend
-    WEED_MYSQL_INTERPOLATEPARAMS: "true"
+    # WEED_MYSQL_ENABLED: "false"
+    # WEED_MYSQL_HOSTNAME: "mysql-db-host"
+    # WEED_MYSQL_PORT: "3306"
+    # WEED_MYSQL_DATABASE: "sw_database"
+    # WEED_MYSQL_CONNECTION_MAX_IDLE: "5"
+    # WEED_MYSQL_CONNECTION_MAX_OPEN: "75"
+    # # "refresh" connection every 10 minutes, eliminating mysql closing "old" connections
+    # WEED_MYSQL_CONNECTION_MAX_LIFETIME_SECONDS: "600"
+    # # enable usage of memsql as filer backend
+    # WEED_MYSQL_INTERPOLATEPARAMS: "true"
     # if you want to use leveldb2, then should enable "enablePVC". or you may lose your data.
-    WEED_LEVELDB2_ENABLED: "true"
+    WEED_LEVELDB2_ENABLED: "false"
     # with http DELETE, by default the filer would check whether a folder is empty.
     # recursive_delete will delete all sub folders and files, similar to "rm -Rf"
     WEED_FILER_OPTIONS_RECURSIVE_DELETE: "false"
