fix: add credentials to chart

--- a/k8s/charts/seaweedfs/templates/s3/s3-secret.yaml
+++ b/k8s/charts/seaweedfs/templates/s3/s3-secret.yaml
@@ -1,8 +1,8 @@
 {{- if not (or .Values.filer.s3.skipAuthSecretCreation .Values.s3.skipAuthSecretCreation) }}
-{{- $access_key_admin := randAlphaNum 16 -}}
-{{- $secret_key_admin := randAlphaNum 32 -}}
-{{- $access_key_read := randAlphaNum 16 -}}
-{{- $secret_key_read := randAlphaNum 32 -}}
+{{- $access_key_admin := coalesce .Values.s3.adminAccessKey .Values.filer.s3.adminAccessKey (randAlphaNum 16) -}}
+{{- $secret_key_admin := coalesce .Values.s3.adminSecretKey .Values.filer.s3.adminSecretKey (randAlphaNum 32) -}}
+{{- $access_key_read := coalesce .Values.s3.readAccessKey .Values.filer.s3.readAccessKey (randAlphaNum 16) -}}
+{{- $secret_key_read := coalesce .Values.s3.readSecretKey .Values.filer.s3.readSecretKey (randAlphaNum 32) -}}
 apiVersion: v1
 kind: Secret
 type: Opaque
