fix: add master to dashboard, scrape interval 10s

--- a/k8s/charts/seaweedfs/templates/master/statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/master/statefulset.yaml
@@ -123,6 +123,9 @@ spec:
               -metricsPort={{ .Values.master.metricsPort }} \
               {{- end }}
               {{- end }}
+              {{- if .Values.master.useRaftHashicorp }}
+              -raftHashicorp \
+              {{- end }}
               -volumeSizeLimitMB={{ .Values.master.volumeSizeLimitMB }} \
               {{- if .Values.master.disableHttp }}
               -disableHttp \
