--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -150,6 +150,9 @@ master:
     WEED_MASTER_VOLUME_GROWTH_COPY_2: 6
     WEED_MASTER_VOLUME_GROWTH_COPY_3: 3
     WEED_MASTER_VOLUME_GROWTH_COPY_OTHER: 1
+  
+  # use Hashicorp raft consensus implementation instead of built-in
+  useRaftHashicorp: true
 
 volume:
   enabled: true
