fix: helm master default data type

--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -68,7 +68,7 @@ master:
   #    size: "24Ti"
   #    storageClass: "local-path-provisioner"
   data:
-    type: "hostPath"
+    type: ""
     size: ""
     storageClass: ""
     hostPathPrefix: /ssd
