--- a/weed/Makefile
+++ b/weed/Makefile
@@ -31,11 +31,11 @@ debug_volume:
 
 debug_webdav:
 	go build -gcflags="all=-N -l"
-	dlv --listen=:2345 --headless=true --api-version=2 --accept-multiclient exec ./weed -- -v=4 server -webdav
+	dlv --listen=:2345 --headless=true --api-version=2 --accept-multiclient exec ./weed -- -v=4 webdav
 
 debug_s3:
 	go build -gcflags="all=-N -l"
-	dlv --listen=:2345 --headless=true --api-version=2 --accept-multiclient exec ./weed -- -v=4 server -s3
+	dlv --listen=:2345 --headless=true --api-version=2 --accept-multiclient exec ./weed -- -v=4 s3
 
 debug_filer_copy:
 	go build -gcflags="all=-N -l"
