helm: consistent logic in master-server template

--- a/k8s/helm_charts2/templates/master-statefulset.yaml
+++ b/k8s/helm_charts2/templates/master-statefulset.yaml
@@ -91,7 +91,7 @@ spec:
             - "-ec"
             - | 
               exec /usr/bin/weed \
-              {{- if .Values.master.logs.type }}
+              {{- if eq .Values.master.logs.type "hostPath" }}
               -logdir=/logs \
               {{- else }}
               -logtostderr=true \
