--- a/.github/workflows/helm_chart_release.yml
+++ b/.github/workflows/helm_chart_release.yml
@@ -13,4 +13,4 @@ jobs:
         uses: stefanprodan/helm-gh-pages@master
         with:          
           token: ${{ secrets.GITHUB_TOKEN }}
-          charts_dir: k8s/helm_charts2
+          charts_dir: k8s/charts
