--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -5,7 +5,7 @@ global:
   repository: ""
   imageName: chrislusf/seaweedfs
   imagePullPolicy: IfNotPresent
-  imagePullSecrets: imagepullsecret
+  imagePullSecrets: ""
   restartPolicy: Always
   loggingLevel: 1
   enableSecurity: false
@@ -449,7 +449,7 @@ s3:
   # should map directly to the value of the resources field for a PodSpec,
   # formatted as a multi-line string. By default no direct resource request
   # is made.
-  resources: null
+  resources: {}
 
   # Toleration Settings for server pods
   # This should be a multi-line string matching the Toleration array
