--- a/.github/workflows/helm_ci.yml
+++ b/.github/workflows/helm_ci.yml
@@ -32,13 +32,13 @@ jobs:
         id: list-changed
         run: |
           ls
-          changed=$(ct list-changed --chart-dirs k8s/charts --target-branch ${{ github.event.repository.default_branch }})
+          changed=$(ct list-changed --chart-dirs k8s/charts 
           if [[ -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --chart-dirs k8s/charts --target-branch ${{ github.event.repository.default_branch }}
+        run: ct lint --chart-dirs k8s/charts 
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
