--- a/.github/workflows/helm_ci.yml
+++ b/.github/workflows/helm_ci.yml
@@ -28,14 +28,14 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.3.1
 
-      - name: Run chart-testing (list-changed)
-        id: list-changed
-        run: |
-          ls
-          changed=$(ct list-changed --chart-dirs k8s/charts 
-          if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
-          fi
+      # - name: Run chart-testing (list-changed)
+      #   id: list-changed
+      #   run: |
+      #     ls
+      #     changed=$(ct list-changed --chart-dirs k8s/charts 
+      #     if [[ -n "$changed" ]]; then
+      #       echo "::set-output name=changed::true"
+      #     fi
 
       - name: Run chart-testing (lint)
         run: ct lint --chart-dirs k8s/charts 
