--- a/.github/workflows/helm_ci.yml
+++ b/.github/workflows/helm_ci.yml
@@ -31,16 +31,16 @@ jobs:
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
-          changed=$(ct list-changed --chart-dirs k8s/charts)
+          changed=$(ct list-changed --validate-maintainers=false --chart-dirs k8s/charts)
           if [[ -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --all --chart-dirs k8s/charts
+        run: ct lint --all --chart-dirs --validate-maintainers=false k8s/charts
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
 
       - name: Run chart-testing (install)
-        run: ct install --chart-dirs k8s/charts
+        run: ct install --validate-maintainers=false --chart-dirs k8s/charts
