--- a/.github/workflows/helm_ci.yml
+++ b/.github/workflows/helm_ci.yml
@@ -43,4 +43,4 @@ jobs:
         uses: helm/kind-action@v1.4.0
 
       - name: Run chart-testing (install)
-        run: ct install --chart-dirs k8s/charts
+        run: ct install --all --chart-dirs k8s/charts
