--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -112,10 +112,10 @@ master:
   # nodeSelector labels for master pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-backend: "true"
+    beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-backend: "true"
 
   # used to assign priority to master pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -251,10 +251,10 @@ volume:
   # nodeSelector labels for server pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-volume: "true"
+   beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-volume: "true"
 
   # used to assign priority to server pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -358,10 +358,10 @@ filer:
   # nodeSelector labels for server pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-backend: "true"
+    beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-backend: "true"
 
   # used to assign priority to server pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -389,7 +389,7 @@ filer:
 
   # extraEnvVars is a list of extra enviroment variables to set with the stateful set.
   extraEnvironmentVars:
-    WEED_MYSQL_ENABLED: "true"
+    WEED_MYSQL_ENABLED: "false"
     WEED_MYSQL_HOSTNAME: "mysql-db-host"
     WEED_MYSQL_PORT: "3306"
     WEED_MYSQL_DATABASE: "sw_database"
@@ -400,7 +400,7 @@ filer:
     # enable usage of memsql as filer backend
     WEED_MYSQL_INTERPOLATEPARAMS: "true"
     # if you want to use leveldb2, then should enable "enablePVC". or you may lose your data.
-    WEED_LEVELDB2_ENABLED: "false"
+    WEED_LEVELDB2_ENABLED: "true"
     # with http DELETE, by default the filer would check whether a folder is empty.
     # recursive_delete will delete all sub folders and files, similar to "rm -Rf"
     WEED_FILER_OPTIONS_RECURSIVE_DELETE: "false"
@@ -459,10 +459,10 @@ s3:
   # nodeSelector labels for server pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-backend: "true"
+    beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-backend: "true"
 
   # used to assign priority to server pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
