--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.44"
+    created: "2023-03-20T03:39:57.830172001Z"
+    description: SeaweedFS
+    digest: 316dda8acb0a132f254100e08af6c91a37fb6435ebcd625a84cc80268db8b475
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.44.tgz
+    version: "3.44"
+  - apiVersion: v1
     appVersion: "3.43"
     created: "2023-02-21T01:05:06.654751634Z"
     description: SeaweedFS
@@ -9,7 +18,7 @@ entries:
     name: seaweedfs
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.43.tgz
-    version: "3.43"  
+    version: "3.43"
   - apiVersion: v1
     appVersion: "3.42"
     created: "2023-02-18T05:19:22.925911445Z"
@@ -19,4 +28,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-02-18T05:19:22.924060926Z"
+generated: "2023-03-20T03:39:57.828066875Z"
