--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.45"
+    created: "2023-04-03T05:56:34.174881818Z"
+    description: SeaweedFS
+    digest: 35be7e2949cc4ab3239a333822f26337428091ae2018821579321dbc57552e12
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.45.tgz
+    version: "3.45"
+  - apiVersion: v1
     appVersion: "3.44"
     created: "2023-03-20T03:39:57.830172001Z"
     description: SeaweedFS
@@ -28,4 +37,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-03-20T03:39:57.828066875Z"
+generated: "2023-04-03T05:56:34.170714306Z"
