--- a/k8s/charts/seaweedfs/templates/s3-deployment.yaml
+++ b/k8s/charts/seaweedfs/templates/s3-deployment.yaml
@@ -93,14 +93,14 @@ spec:
               -cert.file=/usr/local/share/ca-certificates/client/tls.crt \
               -key.file=/usr/local/share/ca-certificates/client/tls.key \
               {{- end }}
-              {{- if .values.s3.domainname }}
-              -domainname={{ .values.s3.domainname }} \
+              {{- if .Values.s3.domainName }}
+              -domainName={{ .Values.s3.domainName }} \
               {{- end }}
               {{- if .Values.s3.collectionPrefix }}
               -collectionPrefix \
               {{- end }}
-              {{- if .values.s3.filerGroup }}
-              -filerGroup={{ .values.s3.filerGroup}} \
+              {{- if .Values.s3.filerGroup }}
+              -filerGroup={{ .Values.s3.filerGroup}} \
               {{- end }}
               {{- if .Values.s3.allowEmptyFolder }}
               -allowEmptyFolder={{ .Values.s3.allowEmptyFolder }} \
