chart with optional https port for s3 https://github.com/seaweedfs/seaweedfs/pull/4482

--- a/k8s/charts/seaweedfs/templates/filer-service.yaml
+++ b/k8s/charts/seaweedfs/templates/filer-service.yaml
@@ -25,6 +25,12 @@ spec:
     port: {{ .Values.filer.s3.port }}
     targetPort: {{ .Values.filer.s3.port }}
     protocol: TCP
+  {{- if .Values.filer.s3.httpsPort }}
+  - name: "swfs-s3-tls"
+    port: {{ .Values.filer.s3.httpsPort }}
+    targetPort: {{ .Values.filer.s3.httpsPort }}
+    protocol: TCP
+  {{- end }}
   {{- end }}
   {{- if .Values.filer.metricsPort }}
   - name: "metrics"
