feat: add s3 ingress

--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -528,6 +528,12 @@ s3:
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
   priorityClassName: ""
 
+  ingress:
+    enabled: false      
+    className: "nginx"
+    host: "s3.local"
+    annotations: {}
+
   logs:
     type: null
     size: ""
